# src/app/Http/Controllers/Api/ShowController.php
@@ -56,7 +56,7 @@ class ShowController extends Controller
     /**
      * @OA\Get(
      *     path="/api/v1/show/short",
-     *     summary="Get user shows",
+     *     summary="Get user short shows list",
      *     tags={"Show"},
      *     @OA\Response(
      *         response=200,
@@ -107,11 +107,11 @@ class ShowController extends Controller
     /**
      * @OA\Post(
      *     path="/api/v1/show/create",
-     *     summary="Get user shows",
+     *     summary="Create new show",
      *     tags={"Show"},
      *     @OA\RequestBody(
      *        required=true,
-     *        description="Pass user credentials",
+     *        description="Create show",
      *        @OA\JsonContent(
      *           required={"title","format","timezone","language","explicit","category"},
      *           @OA\Property(property="title", type="string", example="Exapmle show name"),
@@ -148,6 +148,41 @@ class ShowController extends Controller
         ], Response::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Put(
+     *     path="/api/v1/show/create",
+     *     summary="Update show",
+     *     tags={"Show"},
+     *     @OA\RequestBody(
+     *        required=true,
+     *        description="Update show",
+     *        @OA\JsonContent(
+     *           required={"title","format","timezone","language","explicit","category","show_id"},
+     *           @OA\Property(property="show_id", type="string", example="1"),
+     *           @OA\Property(property="title", type="string", example="Exapmle show name"),
+     *           @OA\Property(property="description", type="string", example="Exapmle show description"),
+     *           @OA\Property(property="artwork", type="string", example=""),
+     *           @OA\Property(property="format", type="string", example="episodic"),
+     *           @OA\Property(property="timezone", type="string", example="Etc/GMT"),
+     *           @OA\Property(property="language", type="string", example="en"),
+     *           @OA\Property(property="explicit", type="boolean", example="true"),
+     *           @OA\Property(property="category", type="string", example="sport"),
+     *           @OA\Property(property="author", type="string", example="Author name"),
+     *           @OA\Property(property="podcast_owner", type="string", example="example author"),
+     *           @OA\Property(property="email_owner", type="string", example="example@domain.com"),
+     *           @OA\Property(property="copyright", type="string", example="copyright"),
+     *        ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation"
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized user"
+     *     )
+     * )
+     */
     public function update(int $id, CreateShowRequest $request): JsonResponse
     {
         $show = $this->service->updateShow($id, $request->all());
